alignment fix for input groups with buttons

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -337,7 +337,12 @@ fieldset {
 
 @include respond-min($screen-smaller) {
     .form__group .input-group {
+        margin-left: 0;
         width: map-get($input-widths, regular);
+
+        .form__control {
+            margin-left: 0;
+        }
     }
 
     @each $variant, $width in $input-widths {
